# capitoltrades_discord

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dockerfile
.github/workflows/: build.yml
crates/capitoltrades_api/: Cargo.toml
crates/capitoltrades_api/src/: client.rs  errors.rs
crates/capitoltrades_api/src/types/: meta.rs  (+4 more)
crates/discord_bot/: Cargo.toml  Makefile
crates/discord_bot/.sqlx/: query-1067a699660c1f99db89805f770f2db4e35365ccf8ab26ce906f46c00c7ff53a.json  query-16b31b3aff55e7bf14dfa5fc905f03d0a7447919422e7f8d9963498e270054f6.json  query-180bf201cb8031ac501bd2f10f2a5795a65b65c51c86a921b92607587e3df96d.json  query-1a18149f86e4d9d1980048aa57b40ee2a78ad62afd6e7cbfbb76287d48ac1376.json  query-596984a493fec1fc10a0bd45bb0db99a4d7b789ed27aa4af547c50d9d225c759.json  query-74b90215c835d450a3a29fead1ffd41667390a78e6e55e962c6c7d8021d54195.json  query-bd1298762c2cb7b69a281368c8bb059bc053bae8eb20ca416c96471b724cddf2.json  query-cf84255f3b6d164f3e54ecae159efbadc900e7f751866696a7ddcccea9642596.json
crates/discord_bot/migrations/: 20240329103744_init.sql  20240330103114_track_price.sql
crates/discord_bot/src/: errors.rs  lib.rs  main.rs
crates/discord_bot/src/endpoints/: actions.rs  help.rs  issuers.rs  mod.rs  politicians.rs  trades.rs
crates/discord_bot/src/markdown/: issuers.rs  mod.rs  politicians.rs  trades.rs
crates/discord_bot/src/notifications/: mod.rs  notified_trades.rs
crates/discord_bot/src/notifications/queries/: get_to_notify.sql  record_delivery.sql
crates/discord_bot/src/tracking/: issuers.rs  mod.rs  politicians.rs  status.rs
(+3 files in other folders)
